vk verify launch params added, callback subscription usecase tested
